--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
         "jsx-a11y/href-no-hash":0,
         "import/no-named-as-default":0,
         "import/no-named-as-default-member":0,
-        "react-hooks/rules-of-hooks": "error"
+        "react-hooks/rules-of-hooks": "error",
+        "react/destructuring-assignment":0
     }
 }
