--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,7 @@
         "import/no-named-as-default":0,
         "import/no-named-as-default-member":0,
         "react-hooks/rules-of-hooks": "error",
-        "react/destructuring-assignment":0
+        "react/destructuring-assignment":0,
+        "react/no-unused-prop-types":0
     }
 }
