--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "scripts": {
     "start": "roadhog server",
+    "start:mock":"ENV=mock roadhog server",
     "build": "roadhog build",
     "lint": "eslint --ext .js src test"
   },
